fix overflow under firefox

--- a/src/route/appfx/style.less
+++ b/src/route/appfx/style.less
@@ -1,76 +1,39 @@
-.ant-layout {
-  &-header {
-    height: 48px;
-    padding: 0 10px 0 0;
-  }
+//.ant-layout {
+//  &-header {
+//    height: 48px;
+//    padding: 0 10px 0 0;
+//  }
+//
+//  &-sider {
+//    width: 200px;
+//    height: ~"calc(100vh - 48px)";
+//    background: #333744;
+//  }
+//
+//  &-content {
+//    margin: 24px;
+//  }
+//
+//  &-footer {
+//    height: 48px;
+//    line-height: 48px;
+//    padding: 0;
+//    text-align: center;
+//    font-size: 12px;
+//    color: #999;
+//    background: #fff;
+//  }
+//}
 
-  &-sider {
-    width: 200px;
-    height: ~"calc(100vh - 48px)";
-    background: #333744;
-  }
-
-  &-content {
-    margin: 24px;
-  }
-
-  &-footer {
-    height: 48px;
-    line-height: 48px;
-    padding: 0;
-    text-align: center;
-    font-size: 12px;
-    color: #999;
-    background: #fff;
-  }
-}
-
-.ant-breadcrumb {
-  height: 64px;
-  line-height: 64px;
-  padding: 0 24px;
-  margin-bottom: -24px;
-}
-
-.app-logo {
-  width: 200px;
-  height: 48px;
-  background: #333;
-  margin: 0;
-  float: left;
-}
-
-.app-header-title {
-  height: 48px;
-  line-height: 48px;
-  font-size: 24px;
-  margin: 0 0 0 20px;
-  float: left;
-}
-
-.app-header-menu {
-  height: 48px;
-  background: #373D41;
-  float: right;
-  .ant-menu-submenu {
-    height: 48px;
-  }
-  .ant-menu-submenu-title {
-    height: 48px;
-  }
-}
-
-.app-sider-menu {
-  background: #42485B;
-  height: ~"calc(100vh - 48px)";
-  overflow-x: hidden;
-  .ant-menu-item {
-    background: #333744;
-  }
-}
-
-.app-content {
-  padding: 24px;
-  min-height: ~"calc(100vh - (48px + 64px - 24px + 24px + 24px + 48px))";
-  background: #fff;
-}
+//.ant-breadcrumb {
+//  height: 64px;
+//  line-height: 64px;
+//  padding: 0 24px;
+//  margin-bottom: -24px;
+//}
+//
+//.app-content {
+//  padding: 24px;
+//  min-height: ~"calc(100vh - (48px + 64px - 24px + 24px + 24px + 48px))";
+//  background: #fff;
+//}
